[package]
name = "wq-core"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/richardanaya/wq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watson = "0.9.0"
serde_json = { version = "1.0.51", default-features = false, features = ["alloc"] }